[tool.poetry]
name = "anigamerplus"
version = "0.1.0"
description = ""
authors = ["gitqwerty777 <goohcl777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "1.1.0"
flask = "1.1.4"
requests = "2.28.1"
chardet = "3.0.4"
gevent = "22.08.0"
flask-basicauth = "0.2.0"
flask-sockets = "0.2.1"
beautifulsoup4 = "4.11.1"
gevent-websocket = "0.10.1"
pysocks = "1.7.1"
greenlet = "1.1.3"
markupsafe = "2.0"
lxml = "4.9.1"
pyhttpx = "^2.10.12"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
